src/test/resources/com/puppycrawl/tools/checkstyle/checks/javadoc/invalidjavadocposition/InputInvalidJavadocPosition7[InputInvalidJavadocPosition]#method().mjava
    void method() {
        /** violation */ int variable1;
        /** violation */ final int variable2;
        /** violation */ @Deprecated int variable3;
    }

